--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="cmod">
   <head>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-slate.min.css">
+    <link rel="stylesheet" href="styles/cmod3.css">
     <script>
       var package = require('./package.json');
       document.title = "cmod3 v" + package.version;
@@ -23,144 +24,6 @@
     <script src="app/ui/info/info.js"></script>
     <script src="app/ui/settings/settings.js"></script>
 
-    <style>
-      /* global */
-      @font-face {
-        font-family: 'Lobster';
-        src: url('fonts/Lobster_1.3.otf');
-      }
-      @font-face {
-        font-family: 'Droid Sans';
-        src: url('fonts/DroidSans.ttf');
-      }
-      /* fixes */
-      button {
-        -webkit-app-region: no-drag;
-      }
-      button:focus {outline:0 !important;}
-      * {
-        cursor: default !important;
-        -webkit-user-select: none;
-      }
-      ::-webkit-scrollbar { width: 0 !important }
-      /* design */
-      html {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        -webkit-app-region: drag;
-        -webkit-overflow-scrolling: none;
-      }
-      body {
-        width: 100%;
-        height: 100%;
-        font-family: 'Droid Sans';
-      }
-      body.hover {
-        opacity: 0.5;
-        background-color: #101723;
-      }
-      #brand {
-        font-family: 'Lobster', cursive;
-        font-size: 22px;
-      }
-      div#vus {
-        position: absolute;
-        top: 9px;
-      }
-      div.vu {
-        width: 170px; height: 4px;
-        margin: 8px;
-        background: -webkit-linear-gradient(left, #4be553 0%,#4be553 54%,#d3e200 79%,#f4c700 86%,#ff0000 100%); /* Chrome10+,Safari5.1+ */
-      }
-      div.vu_overlay {
-        width: 100%; height: 100%;
-        background-color: #0c0e0f;
-        float: right;
-        right: 0;
-        will-change: transform;
-        transform-origin: right;
-      }
-      div#header {
-      }
-      table#playlist {
-        border-radius: 5px;
-      }
-      table#playlist tr.selected_song {
-        color: white;
-      }
-      div#footer {
-        background-color: black;
-        color: #444;
-        margin-top: 4px; padding-bottom: 0px;
-      }
-      div#main {
-        overflow-y: scroll;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 40px;
-        padding-right: 40px;
-      }
-      div#info {
-        overflow-y: scroll;
-        padding-top: 10px;
-        padding-bottom: 10px;
-      }
-
-      /* bootstrap */
-      .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
-        padding: 2px;
-      }
-      .btn-default:hover {
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
-      }
-      .btn-default:active {
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#020202), color-stop(40%, #101112), to(#191b1d));
-      }
-      .dropdown:hover .dropdown-menu {
-        display: block;
-      }
-      pre {
-        border: 0;
-        color: inherit;
-        background-color: #242627;
-      }
-      nav {
-        padding-left: 20px;
-      }
-      .navbar {
-        margin-bottom: 0;
-        border-radius: 0;
-      }
-      .table thead tr th {
-        border: 0;
-      }
-      .table thead, .table tfoot {
-        background-color: #24272A;
-      }
-      .progress {
-        height: 12px;
-        margin-bottom: 0;
-        position: relative;
-        border-radius: 0;
-      }
-      .progress-bar {
-        will-change: transform;
-        transform-origin: left;
-        transform: scaleX(0);
-        width: 100%;
-      }
-      span#song_position_label {
-        position: absolute;
-        color: white;
-        transform: translateX(-50%);
-        left: 50%;
-        bottom: 0;
-        font-size: 8px;
-        line-height: 12px;
-        z-index: 1;
-      }
-    </style>
   </head>
   <body ng-controller="cmodAppCtrl">
     <audio id="audio" src=""></audio>
