--- a/app/ui/info/info.tpl.html
+++ b/app/ui/info/info.tpl.html
@@ -1,5 +1,12 @@
 <div id="info" class="container-fluid" style="height: {{ height }}px">
-  <div ng-show="state.current_song.metadata" class="row">
+
+  <div ng-show="state.playing_nectarine" class="row">
+    <div class="col-xs-6" style="text-align: center; word-wrap: break-word;">
+      <p>Playing Nectarine Demoscene Radio!</p>
+    </div>
+  </div>
+
+  <div ng-show="state.current_song.metadata && !state.playing_nectarine" class="row">
     <div class="col-xs-6" style="text-align: center; word-wrap: break-word;">
       <hr/>
       <p><strong>{{ state.current_song.metadata.title }}</strong></p>
@@ -12,4 +19,5 @@
       <pre class="well">{{ state.current_song.metadata.message }}</pre>
     </div>
   </div>
+
 </div>
