--- a/app/ui/controls/controls.tpl.html
+++ b/app/ui/controls/controls.tpl.html
@@ -8,17 +8,13 @@
     </div>
     <div class="row">
       <div style="margin-bottom: 4px" class="col-xs-12">
-        <button class="btn btn-default" ng-click="play()">
-          <span class="glyphicon glyphicon-play"></span>
-          Play
+        <button class="btn btn-default" ng-click="playOrPause()">
+          <span class="glyphicon" ng-class="playback_status.playing === true && playback_status.paused === false ? 'glyphicon-pause' : 'glyphicon-play'"></span>
+          {{ playback_status.playing === true && playback_status.paused === false ? "Pause" : "Play" }}
         </button>
         <button class="btn btn-default" ng-click="stop()">
           <span class="glyphicon glyphicon-stop"></span>
           Stop
-        </button>
-        <button class="btn btn-default" ng-click="pause()">
-          <span class="glyphicon glyphicon-pause"></span>
-          Pause
         </button>
         <!--button class="btn btn-default" ng-click="addFilesToPlaylist()">
           <span class="glyphicon glyphicon-file"></span>
