--- a/app/ui/header/header.tpl.html
+++ b/app/ui/header/header.tpl.html
@@ -8,6 +8,7 @@
     <div class="collpase navbar-collapse">
       <ul class="nav navbar-nav">
         <li ui-sref-active="active"><a ui-sref="playlist">Playlist</a></li>
+        <li ui-sref-active="active"><a ui-sref="modarchive">Modarchive</a></li>
         <li ui-sref-active="active"><a ui-sref="info">Info</a></li>
         <li>
           <div id="vus">
