config and utils modules

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <script src="app/cmod.js"></script>
     <script src="app/nwgui.js"></script>
+    <script src="app/config.js"></script>
+    <script src="app/utils.js"></script>
     <script src="app/engine/engine.js"></script>
     <script src="app/player/player.js"></script>
     <script src="app/player/state.js"></script>
