--- a/app/ui/settings/settings.tpl.html
+++ b/app/ui/settings/settings.tpl.html
@@ -20,8 +20,8 @@
       <hr/>
       <div class="form-inline">
         <label for="destPathInput">Save Modarchive downloaded files in: </label><br/>
-        <input style="width: 40%" id="destPathInput" type="text" ng-model="moddir" placeholder="Directory path" ng-click="changeModDir()"/>
-        <input style="display: none;" id="destPathInputHidden" type="file" nwworkingdir="{{basedir}}" nwdirectory class="form-control input-sm">
+        <input style="width: 40%" id="destPathInput" type="text" ng-model="moddir" placeholder="Directory path" ng-click="changeModDir()" />
+        <input style="display: none;" id="destPathInputHidden" type="file" nwworkingdir="{{basedir}}" nwdirectory />
       </div>
     </div>
   </div>
