--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cmod">
   <head>
-    <script src="lib/libopenmpt-0.2.5602_cc.js"></script>
+    <script src="lib/libopenmpt-0.2.5602_opt2.js"></script>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-slate.min.css">
     <link rel="stylesheet" href="styles/cmod3.css">
     <script>
