--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       document.title = "cmod3 v" + pkg.version;
       window.ompt = Module;
       // prevent logging
-      console.log = function(){};
+      //console.log = function(){};
     </script>
 
     <link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
