utf8 and ui tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cmod">
   <head>
+    <meta charset="utf-8"/>
     <script src="lib/libopenmpt-0.2.5602_opt2.js"></script>
     <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-slate.min.css">
     <link rel="stylesheet" href="styles/cmod3.css">
