--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       window.ompt = Module;
       // prevent logging
       console.log = function(){};
+      // info is the new logging for engine
+      console.info = function(){};
     </script>
 
     <link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
