--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
   <body ng-controller="cmodAppCtrl">
     <audio id="audio" src=""></audio>
-    <div class="container-fluid" style="padding: 0;">
+    <div id="cmodContainer" class="container-fluid">
       <ng-include src="'app/ui/header/header.tpl.html'"></ng-include>
       <div ui-view></div>
       <ng-include src="'app/ui/controls/controls.tpl.html'"></ng-include>
