--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-cmod3
+<html>
+	<head>
+		<meta http-equiv="Refresh" content="0; url=http://cmod3.atlantisofcode.com" />
+	</head>
+<body>
+	<p>Please follow <a href="http://cmod3.atlantisofcode.com/">this link</a>.</p>
+</body>
+</html>
